--- a/preset_test.html
+++ b/preset_test.html
@@ -31,19 +31,6 @@
   }
 </style>
 
-<style>
-/* Modalità stampa: colore perfetto + ignora tutto tranne l’iframe */
-@media print {
-  body {
-    -webkit-print-color-adjust: exact !important;
-    print-color-adjust: exact !important;
-  }
-  body:not(.print-mode) * {
-    visibility: hidden !important;
-  }
-}
-</style>
-
 
 </head>
 <body>
@@ -324,91 +311,48 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-
-<button id="downloadPDF" class="bx--btn bx--btn--primary" style="margin-top: 2rem;">
-  Scarica PDF
-</button>
-
-
+<script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
+<button onclick="downloadScreenshot()">Scarica Screenshot</button>
 <script>
-function downloadDivPDF() {
-  const sourceDiv = document.getElementById("preset");
-  if (!sourceDiv) {
+async function downloadScreenshot() {
+  const node = document.getElementById('preset');
+  if (!node) {
     alert("Div #preset non trovato!");
     return;
   }
 
-  // Clona il div
-  const clone = sourceDiv.cloneNode(true);
-  clone.style.position = "relative";
-
-  // Aggiungi watermark SOLO nel PDF
+  // Applica watermark temporaneo
   const wm = document.createElement("div");
   wm.textContent = "WATERMARK";
   wm.style.position = "absolute";
   wm.style.top = "50%";
   wm.style.left = "50%";
   wm.style.transform = "translate(-50%, -50%) rotate(-30deg)";
-  wm.style.fontSize = "80px";
-  wm.style.opacity = "0.12";
-  wm.style.color = "#000";
+  wm.style.fontSize = "50px";
+  wm.style.opacity = "0.15";
   wm.style.pointerEvents = "none";
-  wm.style.zIndex = "9999";
-  clone.appendChild(wm);
+  wm.style.zIndex = 999999;
+  node.appendChild(wm);
 
-  // crea iframe nascosto
-  const iframe = document.createElement("iframe");
-  iframe.style.position = "fixed";
-  iframe.style.right = "0";
-  iframe.style.bottom = "0";
-  iframe.style.width = "0";
-  iframe.style.height = "0";
-  iframe.style.border = "0";
-  document.body.appendChild(iframe);
+  try {
+    const dataUrl = await htmlToImage.toPng(node, {
+      quality: 1.0,
+      pixelRatio: 2,  // RISOLUZIONE ALTA
+      backgroundColor: '#ffffff'
+    });
 
-  const doc = iframe.contentDocument || iframe.contentWindow.document;
-
-  // copia i CSS originali della pagina (importantissimo!)
-  let cssText = "";
-  for (const sheet of document.styleSheets) {
-    try {
-      for (const rule of sheet.cssRules) cssText += rule.cssText;
-    } catch (e) {}
+    const link = document.createElement('a');
+    link.download = 'screenshot.png';
+    link.href = dataUrl;
+    link.click();
+  } catch (error) {
+    console.error('Errore screenshot:', error);
+  } finally {
+    wm.remove();
   }
-
-  doc.open();
-  doc.write(`
-    <html>
-      <head>
-        <style>${cssText}</style>
-        <style>
-          @media print {
-            body {
-              margin: 0;
-              -webkit-print-color-adjust: exact !important;
-              print-color-adjust: exact !important;
-            }
-          }
-        </style>
-      </head>
-      <body class="print-mode"></body>
-    </html>
-  `);
-  doc.close();
-
-  // Inserisci il clone del div
-  doc.body.appendChild(clone);
-
-  // Aspetta il rendering
-  setTimeout(() => {
-    iframe.contentWindow.focus();
-    iframe.contentWindow.print();
-    document.body.removeChild(iframe);
-  }, 300);
 }
-
-document.getElementById("downloadPDF").addEventListener("click", downloadDivPDF);
 </script>
+
 
 
 </body>
