--- a/preset_test.html
+++ b/preset_test.html
@@ -158,10 +158,10 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="utils.js"></script>
-  <script src="preset.js"></script>
+  <script src="preset_test.js"></script>
   <script src="fullscreen-menu.js"></script>
   <script src="folder.js"></script>
-  <script src="nav-preset.js"></script>
+  <script src="nav-preset_test.js"></script>
   <script src="zoom.js"></script>
   
 
