--- a/preset_test.html
+++ b/preset_test.html
@@ -478,95 +478,282 @@ function replaceControlsForRender(cloneRoot) {
 }
 
 // main export function
-document.getElementById('downloadPresetPDF').addEventListener('click', async function () {
-  // ensure fonts are loaded
-  if (document.fonts && document.fonts.ready) {
-    try { await document.fonts.ready; } catch(e) {}
-  }
-
-  const original = document.getElementById('preset');
-  if (!original) {
-    alert('Div #preset non trovato');
-    return;
-  }
-
-  // clone deeply including text nodes
-  const clone = original.cloneNode(true);
-
-  // wrap in container so watermark can be absolute
-  const wrapper = document.createElement('div');
-  wrapper.style.position = 'relative';
-  wrapper.style.display = 'inline-block';
-  wrapper.appendChild(clone);
-
-  // put wrapper off-screen to avoid flicker in UI
-  wrapper.style.position = 'fixed';
-  wrapper.style.left = '0';
-  wrapper.style.top = '0';
-  wrapper.style.opacity = '0';
-  wrapper.style.pointerEvents = 'none';
-  wrapper.style.zIndex = '-1';
-  document.body.appendChild(wrapper);
-
-  // Inline computed styles (deep)
-  await inlineComputedStyles(original, clone);
-
-  // replace interactive controls with visuals
-  replaceControlsForRender(clone);
-
-  // add watermark overlay (diagonale, semi trasparente)
-  const watermark = document.createElement('div');
-  watermark.textContent = 'WATERMARK';
-  watermark.style.position = 'absolute';
-  watermark.style.top = '50%';
-  watermark.style.left = '50%';
-  watermark.style.transform = 'translate(-50%, -50%) rotate(-30deg)';
-  watermark.style.opacity = '0.12';
-  watermark.style.fontSize = '140px';
-  watermark.style.fontWeight = '700';
-  watermark.style.pointerEvents = 'none';
-  watermark.style.color = window.getComputedStyle(original).color || '#000';
-  wrapper.appendChild(watermark);
-
-  // measure size of the clone (in pixels)
-  const rect = clone.getBoundingClientRect();
-  const widthPx = Math.ceil(rect.width);
-  const heightPx = Math.ceil(rect.height);
-
-  // determine orientation
-  const orientation = (widthPx > heightPx) ? 'landscape' : 'portrait';
-
-  // html2pdf options: use high scale for better capture of shadows/glow
-  const opt = {
-    margin: 0,
-    filename: 'preset.pdf',
-    image: { type: 'png', quality: 1 },
-    html2canvas: {
-      scale: 3,            // increase quality (3x)
-      useCORS: true,
-      logging: false,
-      allowTaint: false,
-      backgroundColor: null
-    },
-    jsPDF: {
-      unit: 'px',                  // so we can pass px dimensions directly
-      format: [widthPx, heightPx],
-      orientation: orientation
+/* helpers: copia pseudo-elements (::before/::after) */
+function copyPseudoElements(source, target) {
+  ['::before','::after'].forEach(pseudo => {
+    const cs = window.getComputedStyle(source, pseudo);
+    const content = cs.getPropertyValue('content');
+    if (content && content !== 'none' && content !== '""' && content !== "''") {
+      const span = document.createElement('span');
+      // rimuove le virgolette automatiche del content
+      const raw = content.replace(/^"(.*)"$/, '$1').replace(/^'(.*)'$/, '$1');
+      span.textContent = raw;
+      // copia alcune proprietà utili
+      const props = ['position','display','top','left','right','bottom','color','font','fontSize','width','height','transform','opacity','zIndex','pointerEvents','whiteSpace'];
+      props.forEach(p => {
+        try { span.style[p] = cs.getPropertyValue(p) || cs[p] || ''; } catch(e){}
+      });
+      // marcarlo per rimozione successiva
+      span.classList.add('pdf-pseudo-clone');
+      target.appendChild(span);
     }
-  };
+  });
+}
 
+/* aspetta che tutte le immagini in un root siano caricate (incl. svg externi) */
+function waitForImages(root, timeout = 15000) {
+  const imgs = Array.from(root.querySelectorAll('img'));
+  const promises = imgs.map(img => {
+    if (!img.src) return Promise.resolve();
+    if (img.complete && img.naturalWidth !== 0) return Promise.resolve();
+    return new Promise((res, rej) => {
+      const t = setTimeout(() => res('timeout'), timeout);
+      img.addEventListener('load', () => { clearTimeout(t); res('loaded'); }, { once: true });
+      img.addEventListener('error', () => { clearTimeout(t); res('error'); }, { once: true });
+    });
+  });
+  return Promise.all(promises);
+}
+
+/* copia computed styles (la tua funzione ma con await support) */
+async function inlineComputedStylesAsync(sourceEl, targetEl) {
+  // stessa logica di prima ma aspettando microtasks per stabilità
+  const srcChildren = [sourceEl];
+  const tgtChildren = [targetEl];
+  while (srcChildren.length) {
+    const s = srcChildren.shift();
+    const t = tgtChildren.shift();
+    const cs = window.getComputedStyle(s);
+    const props = [
+      'boxSizing','width','height','margin','padding','border','borderRadius',
+      'background','backgroundColor','backgroundImage','backgroundSize','backgroundPosition',
+      'color','font','fontSize','fontWeight','lineHeight','textAlign',
+      'boxShadow','filter','opacity','transform','transformOrigin','zIndex',
+      'display','flexDirection','justifyContent','alignItems',
+      'position','top','left','right','bottom','overflow','whiteSpace','wordBreak'
+    ];
+    for (let p of props) {
+      try { t.style[p] = cs.getPropertyValue(p) || cs[p] || ''; } catch(e){}
+    }
+    // img copy src/size
+    if (s.tagName === 'IMG') {
+      t.src = s.src || t.src;
+      t.alt = s.alt || t.alt || '';
+      t.width = s.width || t.width;
+      t.height = s.height || t.height;
+    }
+    // copia pseudo-elements se presenti
+    copyPseudoElements(s, t);
+
+    const sKids = Array.from(s.childNodes || []);
+    for (let i = 0; i < sKids.length; i++) {
+      const sk = sKids[i];
+      const tk = t.childNodes[i];
+      if (sk && tk && sk.nodeType === 1) {
+        srcChildren.push(sk);
+        tgtChildren.push(tk);
+      }
+    }
+    // yield per non bloccare troppo (utile con DOM grande)
+    await Promise.resolve();
+  }
+}
+
+/* sostituzioni controlli (usiamo la tua versione ma robusta) */
+function replaceControlsForRenderRobust(cloneRoot) {
+  // same logic; se qualcosa fallisce, nasconde l'input per evitare artefatti
   try {
-    // run html2pdf on the wrapper (only the clone)
+    // ranges
+    const ranges = cloneRoot.querySelectorAll('input[type="range"]');
+    ranges.forEach(r => {
+      try {
+        const min = parseFloat(r.min || 0);
+        const max = parseFloat(r.max || 100);
+        const val = parseFloat(r.value || 0);
+        const pct = (val - min) / (max - min || 1);
+        const wrapper = document.createElement('div');
+        wrapper.className = 'pdf-range-replacement';
+        wrapper.style.position = 'relative';
+        wrapper.style.width = (r.offsetWidth || 200) + 'px';
+        wrapper.style.height = (r.offsetHeight || 18) + 'px';
+        wrapper.style.display = 'inline-block';
+        const track = document.createElement('div');
+        track.style.position = 'absolute';
+        track.style.left = '0'; track.style.right = '0';
+        track.style.top = '50%'; track.style.height = '6px';
+        track.style.transform = 'translateY(-50%)';
+        track.style.background = window.getComputedStyle(r).background || '#ddd';
+        track.style.borderRadius = '4px';
+        const filled = document.createElement('div');
+        filled.style.position = 'absolute';
+        filled.style.left = '0'; filled.style.top = '50%';
+        filled.style.height = '6px'; filled.style.transform = 'translateY(-50%)';
+        filled.style.width = (pct * 100) + '%';
+        filled.style.background = getComputedStyle(r).accentColor || '#1976d2';
+        filled.style.borderRadius = '4px';
+        const thumb = document.createElement('div');
+        thumb.style.position = 'absolute';
+        thumb.style.top = '50%';
+        thumb.style.transform = 'translate(-50%,-50%)';
+        thumb.style.left = (pct * 100) + '%';
+        thumb.style.width = '18px'; thumb.style.height = '18px';
+        thumb.style.borderRadius = '50%';
+        thumb.style.background = '#fff';
+        thumb.style.boxShadow = '0 2px 6px rgba(0,0,0,0.35)';
+        thumb.style.border = '1px solid rgba(0,0,0,0.2)';
+        wrapper.appendChild(track); wrapper.appendChild(filled); wrapper.appendChild(thumb);
+        r.parentNode.replaceChild(wrapper, r);
+      } catch(e){ r.style.display='none'; }
+    });
+
+    const checks = cloneRoot.querySelectorAll('input[type="checkbox"], input[type="radio"]');
+    checks.forEach(inp => {
+      try {
+        const box = document.createElement('div');
+        box.style.display = 'inline-block';
+        box.style.width = (inp.offsetWidth || 16) + 'px';
+        box.style.height = (inp.offsetHeight || 16) + 'px';
+        box.style.border = '1px solid rgba(0,0,0,0.4)';
+        box.style.borderRadius = inp.type === 'radio' ? '50%' : '3px';
+        box.style.background = inp.checked ? '#1976d2' : '#fff';
+        if (inp.checked) {
+          const mark = document.createElement('div');
+          mark.style.width='60%'; mark.style.height='60%';
+          mark.style.background='#fff'; mark.style.margin='auto';
+          mark.style.marginTop = '10%'; mark.style.borderRadius = '2px';
+          box.appendChild(mark);
+        }
+        inp.parentNode.replaceChild(box, inp);
+      } catch(e){ inp.style.display='none'; }
+    });
+
+    const selects = cloneRoot.querySelectorAll('select');
+    selects.forEach(s => {
+      try {
+        const sel = document.createElement('div');
+        sel.textContent = (s.options[s.selectedIndex] && s.options[s.selectedIndex].text) || '';
+        const cs = getComputedStyle(s);
+        sel.style.display = cs.display;
+        sel.style.font = cs.font;
+        s.parentNode.replaceChild(sel, s);
+      } catch(e){ s.style.display='none'; }
+    });
+
+    const texts = cloneRoot.querySelectorAll('input[type="text"], input[type="number"], textarea');
+    texts.forEach(i => {
+      try {
+        const div = document.createElement('div');
+        div.textContent = i.value || '';
+        const cs = getComputedStyle(i);
+        div.style.minWidth = (i.offsetWidth || 50) + 'px';
+        div.style.minHeight = (i.offsetHeight || 18) + 'px';
+        div.style.font = cs.font;
+        div.style.color = cs.color;
+        div.style.background = cs.backgroundColor;
+        div.style.border = cs.border;
+        i.parentNode.replaceChild(div, i);
+      } catch(e){ i.style.display='none'; }
+    });
+  } catch(e){
+    console.warn('replaceControlsForRenderRobust error', e);
+  }
+}
+
+/* ENTRY POINT: nuovo export */
+document.getElementById('downloadPresetPDF').addEventListener('click', async function () {
+  try {
+    // aspetta fonts
+    if (document.fonts && document.fonts.ready) {
+      await document.fonts.ready;
+    }
+
+    const original = document.getElementById('preset');
+    if (!original) { alert('Div #preset non trovato'); return; }
+
+    // clone profondo
+    const clone = original.cloneNode(true);
+
+    // wrapper visibile ma trasparente (NON offscreen)
+    const wrapper = document.createElement('div');
+    wrapper.style.position = 'fixed';
+    wrapper.style.left = '0';
+    wrapper.style.top = '0';
+    wrapper.style.opacity = '0';           // visibile dal punto di vista del layout ma invisibile all'utente
+    wrapper.style.pointerEvents = 'none';
+    wrapper.style.zIndex = '99999';
+    wrapper.appendChild(clone);
+    document.body.appendChild(wrapper);
+
+    // applica stili (await)
+    await inlineComputedStylesAsync(original, clone);
+
+    // sostituisci controlli
+    replaceControlsForRenderRobust(clone);
+
+    // aspetta immagini nel clone
+    await waitForImages(clone, 10000);
+
+    // misura dopo che tutto è pronto
+    const rect = clone.getBoundingClientRect();
+    const widthPx = Math.max(1, Math.ceil(rect.width));
+    const heightPx = Math.max(1, Math.ceil(rect.height));
+    const orientation = (widthPx > heightPx) ? 'landscape' : 'portrait';
+
+    // html2pdf / html2canvas options
+    const opt = {
+      margin: 0,
+      filename: 'preset.pdf',
+      image: { type: 'png', quality: 1 },
+      html2canvas: {
+        scale: 3,
+        useCORS: true,
+        logging: true,                // attiva log per debug
+        allowTaint: false,
+        backgroundColor: null,
+        foreignObjectRendering: true, // migliora resa CSS complessi
+        width: widthPx,
+        height: heightPx,
+      },
+      jsPDF: {
+        unit: 'px',
+        format: [widthPx, heightPx],
+        orientation: orientation
+      }
+    };
+
+    // DEBUG (opzionale): prova prima html2canvas da sola e mostra il canvas in pagina
+    // se vedi il canvas bianco, vuol dire che html2canvas non vede nulla.
+    /*
+    const testCanvas = await html2canvas(wrapper, opt.html2canvas);
+    testCanvas.style.opacity = '1';
+    document.body.appendChild(testCanvas);
+    console.log('Test canvas appended for debugging');
+    return;
+    */
+
+    // genera PDF
     await html2pdf().set(opt).from(wrapper).save();
+
   } catch (err) {
-    console.error('html2pdf error', err);
-    alert('Errore nella generazione PDF. Controlla console.');
+    console.error('Errore export PDF:', err);
+    alert('Errore nella generazione PDF — vedi console per dettagli.');
   } finally {
-    // cleanup
-    document.body.removeChild(wrapper);
+    // pulizia (rimuovi gli elementi di debug se necessari)
+    const wrappers = document.querySelectorAll('body > div.pdf-export-wrapper-temp');
+    // rimuovi il wrapper che abbiamo creato (se esiste)
+    try {
+      // trova il wrapper che abbiamo aggiunto e rimuovilo
+      // in questo snippet wrapper è local; più sicuro rimuovere tutti i wrapper invisibili che contengono #preset clone
+      const appended = Array.from(document.body.children).find(c => c.contains(document.querySelector('#preset')) === false && c.style && c.style.opacity === '0' && c.querySelector && c.querySelector('#preset'));
+      if (appended) document.body.removeChild(appended);
+    } catch(e){}
+    // se non trovato, rimuovi il wrapper locale (se è ancora nel DOM)
+    try { if (wrapper && wrapper.parentNode) wrapper.parentNode.removeChild(wrapper); } catch(e){}
   }
 });
 </script>
+
+
 
 
 
