test object rendering false

--- a/preset_test.html
+++ b/preset_test.html
@@ -786,7 +786,7 @@ document.getElementById('downloadPresetPDF').addEventListener('click', async fun
       logging: true,
       width: widthPx,
       height: heightPx,
-      foreignObjectRendering: true
+      foreignObjectRendering: false
     };
 
     console.log('>>> DEBUG calling html2canvas with options', html2canvasOptions);
